testsuite/lab2-testsuite/good/ass_many.cc
int main () {
  let int x, j, i;
  j = i = 6;
  printInt(i+j);
  return 0;
}

